# bystrotex-etc

./: README.md
Rust/: Cargo.toml
Rust/BibTeX/: Cargo.toml
Rust/BibTeX/src/: bib.rs
Rust/src/: main.rs
bystroTeX/: bibtex.rkt  bystrotex.rkt  common.rkt  generate-asciidoc.rkt  generate-latex.rkt  manual.scrbl  slides.rkt  xmlconf.rkt
bystroTeX/schemas/: bystrotex.rnc
examples/: example.xml  lookdown.scrbl
examples/bystroTeX_manual/: bystrotex.xml  defs.rkt  slides-manual.scrbl
examples/letters/: build-tailwind.sh  bystrotex.xml  index.css  letter.scrbl  tailwind.config.js
latex-to-svg/: index.js
profiles/letter/: scribble.css  slide-title.css  slide.css
profiles/paper/: misc.css  scribble.css  slide-title.css  slide.css
profiles/writeup/: misc.css
shell-scripts/: bystro-init.sh
to-asciidoc/: b2adoc.rkt
to-latex/: b2l.rkt  sample-extra-rules.rkt
truques/: dhall.rkt  dir-traverse.rkt  info.rkt  manual.scrbl  md.rkt  multiconf.rkt  multishow.rkt  pdq.rkt  tailwind.rkt  truques.rkt  xml.rkt
