[package]
name = "rust-extras"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biblatex = "0.9.3"
itertools = "0.13.0"
serde = { version = "1.0.205", features = ["serde_derive", "derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["rt", "macros"] }
zeromq = { version = "0.4.0", features = ["tokio"] }
